# docs

./: .env.example  .gitignore  README.md  docusaurus.config.js  package-lock.json  package.json  pyproject.toml  sidebars.js
.github/scripts/: cleanup_branch.py  overwrite_branch.py  update_sdk_version.py  wait_for_checks.py
.github/workflows/: bump-sdk-version.yml  bump_sdk_version.yml  docs_cron.yml  docs_on_pr.yml  docs_test.yml  promote_to_production.yml
docs/SDK/: example.md  example_builder.md  sidebar.json
docs/SDK/portia/: __init__.md  clarification.md  clarification_handler.md  cli.md  cloud.md  common.md  config.md  config_loader.md  context.md  cost_estimator.md  end_user.md  errors.md  execution_context.md  execution_hooks.md  gemini_langsmith_wrapper.md  llm_wrapper.md  logger.md  mcp_session.md  model.md  plan.md  plan_run.md  planner.md  portia.md  prefixed_uuid.md  run_context.md  runner.md  storage.md  token_check.md  token_counter.md  tool.md  tool_call.md  tool_decorator.md  tool_registry.md  tool_wrapper.md  version.md  workflow.md
docs/_lib/: _root-intro.mdx  _tool-intro-local-mcp.mdx  _tool-intro-microsoft.mdx  _tool-intro-oauth.mdx  _tool-intro-open-source.mdx  _tool-intro-remote-mcp.mdx  _tool-intro-slack.mdx  _tool-intro-zendesk.mdx
docs/portia-tools/: index.mdx  sidebar.json
docs/portia-tools/github/: index.mdx  list-repo-issues.mdx  list-repos.mdx  search-repos.mdx  star-repo.mdx
docs/portia-tools/google-workspace/: calendar-check-availability.mdx  calendar-create-event.mdx  drive-search.mdx  (+13 more)
docs/product/: Community.md  Roadmap.md  intro.md
docs/resources/: Technical and Security Guarantees.md
src/clientModules/: posthog.ts
src/components/: ItemList.tsx  ToolCategoryItems.tsx  ToolList.tsx  ToolRoot.tsx  ToolSearch.tsx  ToolsByCategory.tsx
src/css/: custom.css
src/lib/: tools.ts
static/api/: swagger.yaml
tests/: conftest.py  test_code_examples.py
(+353 files in other folders)
