[project]
name = "docs-test"
version = "0.1.0"
description = ""
authors = []
requires-python = ">=3.11,<3.14"
dependencies = [
    "pytest-examples>=0.0.15,<0.0.16",
    "portia-sdk-python[all]",
    "pytest-xdist>=3.7.0,<4",
    "testcontainers>=4.10.0,<5",
    "steel-thread>=0.1.15",
]

[dependency-groups]
dev = ["pytest>=7.4.0,<8"]

[tool.uv]
package = false

[tool.uv.sources]
portia-sdk-python = { git = "https://github.com/portiaAI/portia-sdk-python.git", rev = "e0a39a14789f75479162fb77ad76b3c9b5659eb7" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
