[project]
name = "docs-test"
version = "0.1.0"
description = ""
authors = []
requires-python = ">=3.11,<3.14"
dependencies = [
    "pytest-examples>=0.0.15,<0.0.16",
    "portia-sdk-python[all]",
    "pytest-xdist>=3.7.0,<4",
    "testcontainers>=4.10.0,<5",
    "steel-thread>=0.1.15",
]

[dependency-groups]
dev = ["pytest>=7.4.0,<8"]

[tool.uv]
package = false

[tool.uv.sources]
portia-sdk-python = { git = "https://github.com/portiaAI/portia-sdk-python.git", rev = "90097db1d4a3e63352fba4c0fb6aacbf667db501" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
